# truthcore

./: .env.example  .gitignore  AGENTS.md  AUTHORITY_GAP_REVERSIBILITY_MATRIX.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COGNITIVE_SUBSTRATE_ARCHITECTURE.md  COGNITIVE_SUBSTRATE_SUMMARY.md  CONTRIBUTING.md  GOVERNANCE.md  GOVERNANCE_CONSOLIDATION.md  GOVERNANCE_CONSOLIDATION_PRE_ENFORCEMENT.md  GOVERNANCE_ONTOLOGIES.md  IMPLEMENTATION_SUMMARY.md  INSTRUMENTATION_SUMMARY.md  LEVER_ACTIVATION_OVERRIDE_EXPIRY_WARNINGS.md  MILESTONE_TRUTH_SPINE.md  QUICKSTART.md  README.md  REALITY_CAPTURE_REPORT.md  REVERSIBILITY_GUARANTEES.md  SECURITY.md  SILENT_INSTRUMENTATION_LAYER.md  SKILLS.md  SPINE_IMPLEMENTATION_COMPLETE.md  UPGRADE_NOTES.md  debug_sig.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  release.yml
contracts/: config.schema.json  contracts.version.json  error_envelope.schema.json  evidence_packet.schema.json  explainability_envelope.schema.json  module_manifest.schema.json  structured_log_event.schema.json
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: main.ts  styles.css
docs/: ARCHITECTURE_DIAGRAMS.md  AUDIT_NOTES.md  DEPLOYMENT.md  EVIDENCE.md  IMPLEMENTATION_TRACKER.md  LAUNCH_RISKS.md  LAUNCH_SUMMARY.md  LAUNCH_TASKS.md  QUICK_REFERENCE.md  REALITY_MAP.md  SECURITY.md  change_impact_engine.md  consumer_integration.md  contracts.md  m9_audit.md  migrations.md  normalization.md  replay_and_simulation.md  server.md  truth_graph.md  verdict_model.md  versioning_policy.md
evidence-packets/: GP-0001-secret-api-key.json  GP-0002-private-key-blocker.json  GP-0003-clean-file-no-secrets.json  GP-0004-aws-access-key.json  GP-0005-github-token.json  GP-0006-debug-in-production.json  GP-0007-ssl-verification-disabled.json  GP-0008-path-traversal.json  GP-0009-pii-credit-card.json  GP-0010-pii-email-allowlist.json  GP-0011-pii-real-email.json  GP-0012-agent-unsafe-code-exec.json  GP-0013-agent-safe-config.json  GP-0014-weak-crypto.json  GP-0015-hardcoded-password.json  GP-0016-jwt-token.json  GP-0017-pii-ssn.json  GP-0018-agent-no-human-loop.json  GP-0019-permissive-cors.json  GP-0020-pii-ip-localhost-allowlist.json  GP-0021-multiple-secrets-same-file.json  GP-0022-empty-file-no-findings.json  golden_test_packet.schema.json
examples/replay_bundle/: README.md  changes_example.yaml
examples/run_plan/: changed_files.txt  run_plan_example.json  sample.diff
examples/server_api/: README.md  server_api_example.py
examples/truth_graph/: truth_graph_example.json
integrations/github-actions/: README.md  action.yml
scripts/: check_contract_versions.py  contracts_check.py  create_example_bundle.py  doctor.py  run_pytest.py  verify-install.sh
src/truthcore/: __init__.py  anomaly_scoring.py  cache.py  canonical.py  cli.py  compat.py  determinism.py  envelope.py  impact.py  (+15 more)
tests/: test_contracts.py  test_determinism.py  test_evidence_golden.py  test_findings.py  test_golden_evidence_packets.py  test_golden_fixtures.py  test_impact.py  test_normalization.py  test_performance.py  test_policy.py  test_provenance.py  test_replay.py  test_reversibility_guarantees.py  test_server.py  test_server_e2e.py  test_spine.py  test_truth_graph.py  test_upgrades.py  test_verdict.py  test_verdict_governance.py
(+105 files in other folders)
