[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truth-core"
version = "0.1.0"
description = "Deterministic evidence-based verification framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]

[project.scripts]
truthctl = "truthcore.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
