[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truth-core"
version = "0.2.0"
description = "Deterministic evidence-based verification framework"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Truth Core Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "typing-extensions>=4.8.0",
    "jsonschema>=4.20.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.350",
    "httpx>=0.27.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
parquet = [
    "pyarrow>=15.0.0",
    "pandas>=2.0.0",
]

[project.scripts]
truthctl = "truthcore.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/truth-core"
Documentation = "https://github.com/your-org/truth-core/tree/main/docs"
Repository = "https://github.com/your-org/truth-core.git"
Issues = "https://github.com/your-org/truth-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/truthcore"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/docs",
    "/tests",
    "/examples",
    "/LICENSE",
    "/README.md",
    "/UPGRADE_NOTES.md",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.git", "**/node_modules"]
typeCheckingMode = "basic"
reportMissingTypeStubs = "warning"
reportMissingImports = "warning"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportOptionalMemberAccess = "warning"
reportAttributeAccessIssue = "warning"
reportAssignmentType = "warning"
reportOptionalIterable = "warning"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
